fix path with  '#'